plugins {
	id 'application'
}

version = '1.0.0.RELEASE'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories { 
	mavenCentral()
}

dependencies {
	testImplementation 	group: 'junit', name: 'junit', version: '4.8.2'
	testImplementation group: 'org.mockito', name:'mockito-all', version: '1.8.5'
	testImplementation group: 'org.hamcrest', name:'hamcrest-all', version: '1.1'
}

application {
	mainClass = 'net.tomhermann.textimage.Main'
}
